--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
+    "@date-fns/tz": "^1.4.1",
     "@date-fns/utc": "^2.1.1",
     "@microsoft/kiota-authentication-azure": "^1.0.0-preview.99",
     "@microsoft/microsoft-graph-types": "^2.43.1",
@@ -32,5 +33,6 @@
     "exceljs": "^4.4.0",
     "ora": "^9.1.0",
     "unpdf": "^1.4.0"
-  }
+  },
+  "packageManager": "bun@1.3.8"
 }
